# openvtc

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: audit.toml
.github/workflows/: ci.yml
did-git-sign/: Cargo.toml  README.md
did-git-sign/src/: config.rs  init.rs  main.rs  sign.rs  vta.rs
docs/: openvtc-config-data-structure.md  secured-configuration-management.md
docs/architecture/: ADR-001-hero-contributor-verification.md
openvtc-cli/: README.md
openvtc-cli/src/: config.rs  main.rs  status.rs
openvtc-cli/src/contacts/: mod.rs
openvtc-cli/src/interactions/vrc/: display.rs  issued.rs  mod.rs  request.rs
openvtc-cli/src/maintainers/: mod.rs
openvtc-cli/src/messaging/: mod.rs
openvtc-cli/src/openpgp_card/: mod.rs  write.rs
openvtc-cli/src/relationships/: inbound.rs  messages.rs  mod.rs
openvtc-cli/src/setup/: bip32_bip39.rs  did.rs  mod.rs  openpgp_card.rs  pgp_export.rs  pgp_import.rs
openvtc-cli/src/tasks/: clear.rs  fetch.rs  interact.rs  mod.rs
openvtc-cli2/: README.md  did.jsonl
openvtc-cli2/src/: cli.rs  main.rs
openvtc-cli2/src/state_handler/: mod.rs  setup_did_actions.rs  setup_token_actions.rs  setup_vta_actions.rs  setup_wizard.rs  state.rs
openvtc-cli2/src/state_handler/actions/: mod.rs
openvtc-cli2/src/state_handler/main_page/: menu.rs  mod.rs
openvtc-cli2/src/state_handler/messaging/: mod.rs
openvtc-cli2/src/state_handler/setup_sequence/: config.rs  did_keys.rs  mod.rs  openpgp_card.rs  vta.rs
openvtc-cli2/src/ui/pages/: mod.rs
openvtc-cli2/src/ui/pages/main/: mod.rs
openvtc-cli2/src/ui/pages/main/components/: content_panel.rs  menu_panel.rs
openvtc-cli2/src/ui/pages/setup_flow/: did_keys_export_ask.rs  did_keys_export_show.rs  did_keys_show.rs  final_page.rs  mediator_ask.rs  mediator_custom.rs  mod.rs  navigation.rs  start_ask.rs  unlock_code_ask.rs  unlock_code_set.rs  unlock_code_warn.rs  username.rs  vta_authenticate.rs  vta_keys_fetch.rs  webvh_address.rs  webvh_server_progress.rs  webvh_server_select.rs
openvtc-cli2/src/ui/pages/setup_flow/pgp_token/: token_factory_reset.rs  token_select.rs  token_set_cardholder_name.rs  token_set_touch.rs  token_start.rs
openvtc-lib/: Cargo.toml  README.md
openvtc-lib/benches/: crypto.rs
openvtc-lib/examples/: encrypt_decrypt.rs
openvtc-lib/src/: bip32.rs  colors.rs  errors.rs  lib.rs  logs.rs  maintainers.rs  process_lock.rs  relationships.rs  tasks.rs  vrc.rs
openvtc-lib/src/config/: did.rs  keys.rs  loading.rs  mod.rs  protected_config.rs  public_config.rs  saving.rs  secured_config.rs
openvtc-lib/src/openpgp_card/: crypt.rs  mod.rs
openvtc-lib/tests/: config_encryption.rs  logs.rs  message_types.rs  profile_validation.rs  relationships.rs  tasks.rs  vrc.rs
openvtc-service/: README.md
openvtc-service/src/: main.rs
robotic-maintainers/src/: main.rs
