[package]
name = "did-git-sign"
description = "Git commit signing proxy using DID Ed25519 keys via VTA"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vta-sdk = { workspace = true, features = ["client", "session"] }
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
keyring = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }
dirs = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = "2.1"
ssh-key = { version = "0.6", features = ["ed25519", "crypto"] }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dialoguer = { workspace = true }

[dev-dependencies]
tempfile = "3"
